--- a/realm/benchmarks/CMakeLists.txt
+++ b/realm/benchmarks/CMakeLists.txt
@@ -11,7 +11,6 @@
 # the License.
 
 #region Benchmark Properties
-set(BENCHMARK_RESOURCE_LOCK)
 set(BENCHMARK_DEFAULT_ARGS)
 set(BENCHMARK_ARGS
     ""
@@ -30,11 +29,9 @@ if(MPIEXEC_EXECUTABLE)
   list(PREPEND BENCHMARK_LAUNCHER "${MPIEXEC_EXECUTABLE}" ${MPIEXEC_NUMPROC_FLAG}
        ${BENCHMARK_PROCESSORS} ${MPIEXEC_PREFLAGS}
   )
-  list(APPEND TEST_RESOURCE_LOCK network)
 endif()
 
 if(REALM_USE_CUDA OR REALM_USE_HIP)
-  list(APPEND BENCHMARK_RESOURCE_LOCK gpu)
   set(BENCHMARK_DEFAULT_ARGS -ll:gpu 1)
   set(BENCHMARK_USE_GPU TRUE)
   set(TEST_GPU_LIBS $<TARGET_NAME_IF_EXISTS:CUDA::cudart> $<TARGET_NAME_IF_EXISTS:hip::host>)
@@ -71,10 +68,8 @@ macro(add_benchmark target)
   add_executable(${target} ${ARGN})
   target_link_libraries(${target} Realm::Realm)
   add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}> ${BENCHMARK_ARGS} ${${target}_ARGS})
-  set_property(
-    TEST ${target} PROPERTY RESOURCE_LOCK $<REMOVE_DUPLICATES:${TEST_RESOURCE_LOCK}
-                            ${${target}_RESOURCE_LOCK}>
-  )
+  # Benchmarks need to be run in isolation to get accurate results
+  set_property(TEST ${target} PROPERTY RUN_SERIAL TRUE)
   if(REALM_USE_UCX)
     add_dependencies(${target} realm_ucp_bootstrap_mpi)
   endif()
