--- a/realm/tests/CMakeLists.txt
+++ b/realm/tests/CMakeLists.txt
@@ -211,6 +211,7 @@ add_integration_test(serializing "${REALM_TEST_DIR}/serializing.cc")
 set(ctxswitch_ARGS -ll:io 1 -t 30 -i 10000)
 add_integration_test(ctxswitch "${REALM_TEST_DIR}/ctxswitch.cc")
 add_integration_test(barrier_reduce "${REALM_TEST_DIR}/barrier_reduce.cc")
+add_integration_test(barrier_arrivals "${REALM_TEST_DIR}/barrier_arrivals.cc")
 add_integration_test(taskreg "${REALM_TEST_DIR}/taskreg.cc")
 add_integration_test(idcheck "${REALM_TEST_DIR}/idcheck.cc")
 add_integration_test(inst_reuse "${REALM_TEST_DIR}/inst_reuse.cc")
