realm: fix examples and tests

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory(future_map_transforms)
 add_subdirectory(collective_writes)
 add_subdirectory(concurrent_tasks)
 add_subdirectory(tree_collectives)
+add_subdirectory(machine_config)
 
 if(Legion_MPI_INTEROP)
   add_subdirectory(mpi_interop)
